--- a/style.css
+++ b/style.css
@@ -153,3 +153,15 @@ body {
   margin-top: 5px;
   width: 100%;
 }
+
+.info {
+  font-size: 16px;
+  color: #acacac;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
